--- a/package.json
+++ b/package.json
@@ -2,5 +2,14 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.5",
     "tailwindcss": "^4.1.5"
-  }
+  },
+  "devDependencies": {
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11"
+  },
+"scripts": {
+		    "format": "prettier --write \"**/*.{html,js,jsx,ts,tsx,md}\""
+
+	}
+
 }
