feat: live reloading in the browser in <25ms

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
+    "browser-sync": "^3.0.4",
+    "chokidar-cli": "^3.0.0",
+    "concurrently": "^9.1.2",
+    "onchange": "^7.1.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11"
   },
